--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -37,7 +37,7 @@
 # Node names are generated dynamically on startup, so you're relieved
 # from configuring them manually. You can tie this node to a specific name:
 #
-node.name: "Warrant Group Dev"
+node.name: "Warrant Group"
 
 # Every node can be configured to allow or deny being eligible as the master,
 # and to allow or deny to store the data.
@@ -211,7 +211,7 @@ network.host: 127.0.0.1
 
 # Set a custom port for the node to node communication (9300 by default):
 #
-transport.tcp.port: 9301
+transport.tcp.port: 9300
 
 # Enable compression for all communication between nodes (disabled by default):
 #
@@ -219,7 +219,7 @@ transport.tcp.port: 9301
 
 # Set a custom port to listen for HTTP traffic:
 #
-http.port: 9201
+http.port: 9200
 
 # Set a custom allowed content length:
 #
